--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ androidx-compose-bom = "2023.10.01"
 androidx-corektx = "1.13.0-alpha01"
 androidxHiltNavigationCompose = "1.0.0"
 converterGson = "2.9.0"
+compose-map = "4.1.1"
 gradle-versions = "0.49.0"
 hilt = "2.43.2"
 hiltExt = "1.0.0"
@@ -35,6 +36,7 @@ androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidxHiltNavigationCompose" }
 androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+compose-map = { module = "com.google.maps.android:maps-compose", version.ref = "compose-map" }
 okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
