--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanist-permission = "0.32.0"
 androidGradlePlugin = "8.1.2"
 androidx-activity-compose = "1.8.0"
 androidx-compose-bom = "2023.10.01"
@@ -22,6 +23,7 @@ compose-compiler = "1.4.0"
 
 
 [libraries]
+accompanist-permission = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist-permission" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "androidx-compose-bom" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3" }
