--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ hiltExt = "1.0.0"
 kotlin = "1.8.0"
 lifecycle-runtime-ktx = "2.6.2"
 okhttp = "4.11.0"
+playservices-location = "21.0.1"
 retrofit = "2.9.0"
 version-catalog-update = "0.8.1"
 
@@ -44,6 +45,7 @@ okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 hilt-ext-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltExt" }
+playservices-location = { module = "com.google.android.gms:play-services-location", version.ref = "playservices-location" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 
 [plugins]
