--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,57 +1,59 @@
 [versions]
-accompanist-permission = "0.32.0"
+accompanistPermission = "0.32.0"
 androidGradlePlugin = "8.1.2"
-androidx-activity-compose = "1.8.0"
-androidx-compose-bom = "2023.10.01"
-androidx-corektx = "1.13.0-alpha01"
-androidxHiltNavigationCompose = "1.0.0"
-converterGson = "2.9.0"
-compose-map = "4.1.1"
-gradle-versions = "0.49.0"
-hilt = "2.43.2"
-hiltExt = "1.0.0"
-kotlin = "1.8.0"
-lifecycle-runtime-ktx = "2.6.2"
-okhttp = "4.11.0"
-playservices-location = "21.0.1"
+activityCompose = "1.8.0-alpha03"
+composeBom = "2023.06.01"
+composeLatest = "1.4.0-alpha03"
+ktx = "1.7.0"
+hiltNavigationCompose = "1.0.0"
+composeMap = "4.1.1"
+gradleVersions = "0.49.0"
+hilt = "2.48"
+kotlin = "1.9.10"
+ksp = "1.9.10-1.0.13"
+lifecycle = "2.6.0-alpha04"
+material3 = "1.0.1"
+okhttp = "4.10.0"
+playservicesLocation = "21.0.1"
 retrofit = "2.9.0"
-version-catalog-update = "0.8.1"
+versionCatalogUpdate = "0.8.1"
 
 minSdk = "26"
 targetSdk = "34"
 compileSdk = "34"
-compose-compiler = "1.4.0"
+compose-compiler = "1.5.3"
 
 
 [libraries]
-accompanist-permission = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist-permission" }
-androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
-androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "androidx-compose-bom" }
-androidx-compose-material3 = { module = "androidx.compose.material3:material3" }
-androidx-compose-ui = { module = "androidx.compose.ui:ui" }
+accompanist-permission = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermission" }
+android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref = "androidGradlePlugin" }
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
+androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
+androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
+androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "composeLatest" }
 androidx-compose-ui-googlefonts = { module = "androidx.compose.ui:ui-text-google-fonts" }
 androidx-compose-ui-test = { module = "androidx.compose.ui:ui-test" }
 androidx-compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
 androidx-compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
 androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
-androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-corektx" }
-androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidxHiltNavigationCompose" }
-androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
-compose-map = { module = "com.google.maps.android:maps-compose", version.ref = "compose-map" }
+androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "ktx" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+compose-map = { module = "com.google.maps.android:maps-compose", version.ref = "composeMap" }
 okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
-hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
-hilt-ext-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltExt" }
-playservices-location = { module = "com.google.android.gms:play-services-location", version.ref = "playservices-location" }
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+playservices-location = { module = "com.google.android.gms:play-services-location", version.ref = "playservicesLocation" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-version-catalog-update = { id = "nl.littlerobots.version-catalog-update", version.ref = "version-catalog-update" }
-gradle-versions = { id = "com.github.ben-manes.versions", version.ref = "gradle-versions" }
+version-catalog-update = { id = "nl.littlerobots.version-catalog-update", version.ref = "versionCatalogUpdate" }
+gradle-versions = { id = "com.github.ben-manes.versions", version.ref = "gradleVersions" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
