--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,20 @@
 [versions]
 accompanistPermission = "0.32.0"
-androidGradlePlugin = "8.1.2"
-activityCompose = "1.8.0-alpha03"
-composeBom = "2023.06.01"
-composeLatest = "1.4.0-alpha03"
-ktx = "1.7.0"
-hiltNavigationCompose = "1.0.0"
+androidGradlePlugin = "8.1.3"
+activityCompose = "1.8.0"
+composeBom = "2023.10.01"
+composeLatest = "1.6.0-alpha08"
+ktx = "1.12.0"
+hiltNavigationCompose = "1.1.0"
 composeMap = "4.1.1"
-destinations = "1.8.42-beta"
+destinations = "1.9.54"
 gradleVersions = "0.49.0"
-hilt = "2.48"
+hilt = "2.48.1"
 kotlin = "1.9.10"
 ksp = "1.9.10-1.0.13"
-lifecycle = "2.6.0-alpha04"
-material3 = "1.0.1"
-okhttp = "4.10.0"
+lifecycle = "2.7.0-beta01"
+material3 = "1.1.2"
+okhttp = "4.11.0"
 playservicesLocation = "21.0.1"
 retrofit = "2.9.0"
 versionCatalogUpdate = "0.8.1"
