--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,14 +4,15 @@ androidGradlePlugin = "8.1.3"
 activityCompose = "1.8.0"
 composeBom = "2023.10.01"
 composeLatest = "1.6.0-alpha08"
-ktx = "1.12.0"
 hiltNavigationCompose = "1.1.0"
 composeMap = "4.1.1"
 destinations = "1.9.54"
 gradleVersions = "0.49.0"
 hilt = "2.48.1"
+ktlint = "11.6.1"
 kotlin = "1.9.10"
 ksp = "1.9.10-1.0.13"
+ktx = "1.12.0"
 lifecycle = "2.7.0-beta01"
 material3 = "1.1.2"
 okhttp = "4.11.0"
@@ -62,3 +63,4 @@ version-catalog-update = { id = "nl.littlerobots.version-catalog-update", versio
 gradle-versions = { id = "com.github.ben-manes.versions", version.ref = "gradleVersions" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
