--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,10 @@ lifecycle = "2.7.0-beta01"
 material3 = "1.1.2"
 okhttp = "4.11.0"
 playservicesLocation = "21.0.1"
+test-junit = "4.13.2"
+test-junit-core = "1.6.1"
+test-robolectric = "4.3"
+test-mockk = "1.13.7"
 retrofit = "2.9.0"
 versionCatalogUpdate = "0.8.1"
 
@@ -48,13 +52,17 @@ converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref
 compose-map = { module = "com.google.maps.android:maps-compose", version.ref = "composeMap" }
 destinations-core = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "destinations" }
 destinations-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "destinations" }
-okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
-okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+ksp = { module = "com.google.devtools.ksp:symbol-processing", version.ref = "ksp" }
+okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 playservices-location = { module = "com.google.android.gms:play-services-location", version.ref = "playservicesLocation" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
-ksp = { module = "com.google.devtools.ksp:symbol-processing", version.ref = "ksp" }
+test-junit = { module = "junit:junit", version.ref = "test-junit" }
+test-junit-core = { module = "androidx.test:core", version.ref = "test-junit-core" }
+test-roboelectric = { module = "org.robolectric:robolectric", version.ref = "test-robolectric" }
+test-mockk = { module = "io.mockk:mockk", version.ref = "test-mockk" }
 
 
 [plugins]
